refactor(i18n): modify wording

--- a/src/i18n/locales/ar/common.json
+++ b/src/i18n/locales/ar/common.json
@@ -5,8 +5,8 @@
   "iBCenter": "مركز الوسطاء المُعرّفين",
   "contactUs": "اتصل بنا",
   "telegram": "Telegram",
-  "Miduoke": "Miduoke",
-  "LiveChat": "LiveChat",
+  "Miduoke": "خدمة العملاء 1",
+  "LiveChat": "خدمة العملاء 2",
   "whatsApp": "WhatsApp",
   "line": "Line",
   "clientPortal": "تسجيل",
