--- a/src/i18n/locales/cn/common.json
+++ b/src/i18n/locales/cn/common.json
@@ -5,8 +5,8 @@
   "iBCenter": "代理中心",
   "contactUs": "联系我们",
   "telegram": "Telegram",
-  "Miduoke": "米多客在线客服",
-  "LiveChat": "在线客服",
+  "Miduoke": "在线客服1",
+  "LiveChat": "在线客服2",
   "whatsApp": "WhatsApp",
   "line": "Line",
   "clientPortal": "存取款登陆",
