--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -5,8 +5,8 @@
   "iBCenter": "IB Center",
   "contactUs": "Contact us",
   "telegram": "Telegram",
-  "Miduoke": "Miduoke",
-  "LiveChat": "LiveChat",
+  "Miduoke": "Customer service 1",
+  "LiveChat": "Customer service 2",
   "whatsApp": "WhatsApp",
   "line": "Line",
   "clientPortal": "Client Portal",
