--- a/src/i18n/locales/id/common.json
+++ b/src/i18n/locales/id/common.json
@@ -5,8 +5,8 @@
   "iBCenter": "Pusat IB",
   "contactUs": "Hubungi kami",
   "telegram": "Telegram",
-  "Miduoke": "Miduoke",
-  "LiveChat": "LiveChat",
+  "Miduoke": "Pelayanan pelanggan 1",
+  "LiveChat": "Pelayanan pelanggan 2",
   "whatsApp": "WhatsApp",
   "line": "Line",
   "clientPortal": "daftar",
