--- a/src/i18n/locales/vi/common.json
+++ b/src/i18n/locales/vi/common.json
@@ -5,8 +5,8 @@
   "iBCenter": "Trung tâm đại lý",
   "contactUs": "Liên hệ chúng tôi",
   "telegram": "Telegram",
-  "Miduoke": "Miduoke",
-  "LiveChat": "LiveChat",
+  "Miduoke": "Dịch vụ khách hàng 1",
+  "LiveChat": "Dịch vụ khách hàng 2",
   "whatsApp": "WhatsApp",
   "line": "Line",
   "clientPortal": "Đăng ký",
