--- a/src/i18n/locales/zh/common.json
+++ b/src/i18n/locales/zh/common.json
@@ -5,8 +5,8 @@
   "iBCenter": "代理中心",
   "contactUs": "聯繫我們",
   "telegram": "Telegram",
-  "Miduoke": "米多客線上客服",
-  "LiveChat": "線上客服",
+  "Miduoke": "線上客服1",
+  "LiveChat": "線上客服2",
   "whatsApp": "WhatsApp",
   "line": "Line",
   "clientPortal": "存取款登入",
