--- a/src/i18n/locales/ms/common.json
+++ b/src/i18n/locales/ms/common.json
@@ -5,8 +5,8 @@
   "iBCenter": "Pusat Agen",
   "contactUs": "Hubungi Kami",
   "telegram": "Telegram",
-  "Miduoke": "Miduoke",
-  "LiveChat": "LiveChat",
+  "Miduoke": "Khidmat Pelanggan 1",
+  "LiveChat": "Khidmat Pelanggan 2",
   "whatsApp": "WhatsApp",
   "line": "Line",
   "clientPortal": "daftar",
