refactor(i18n): modify i18n files

--- a/src/i18n/locales/ar/intermediateTrading.json
+++ b/src/i18n/locales/ar/intermediateTrading.json
@@ -103,7 +103,7 @@
   "yourInitialStopLoss": "مستوى وقف الخسارة الأولي ومستوى الربح الأولي الخاصين بك؛",
   "positionSize": "حجم الصفقة؛",
   "reasonForOpeningAPosition": "سبب فتح الصفقة؛",
-  "psychologyDuringThe": "الحالة النفسية أثناء الصفقة؛：",
+  "psychologyDuringThe": "الحالة النفسية أثناء الصفقة؛:",
   "whetherItIsProfitOrLoss": "سواء كان ربحًا أو خسارة؛",
   "openingAndClosingPositions": "لقطة شاشة لفتح وإغلاق الصفقات للمخطط الزمني..",
   "ifYouWantToBeAConsistent": "إذا كنت تريد أن تكون متداولًا مستمراً، فإن وجود استراتيجية تداول هو أمر بالغ الأهمية - لا تقلل أبدًا من قوة الخطة.",
@@ -118,7 +118,7 @@
   "moreCautiousTraders": "إن المتداولون الأكثر حذراً قد يميلون لانتظار السعر لإعادة اختبار خط العنق (أي يقوم السعر بلمس خط العنق مرة أخرى)، ثم يدخلون السوق عندما يفشل السعر في كسر خط العنق لأعلى. بالطبع، قد يبدأ السعر في بعض الأحيان في الانخفاض مباشرة بعد كسر خط العنق دون النظر إلى الوراء. كونك اخترت التداول بحذر أكثر يعتمد على مراقبة المتداولين للسوق.",
   "afterTheTradeIsOpened": "عادة ما يتم تحديد هدف الربح على أنه المسافة بالنقاط من الرأس إلى خط العنق، بعد فتح التداول.",
   "inAdditionYouMaySometimes": "بالإضافة إلى ذلك، قد تواجه أحيانًا نمط قاع الرأس والكتفين. إن قاع الرأس والكتفين يميل إلى الظهور في نهاية موجة الاتجاه الهبوطي ويعني أن ارتفاع الأسعار في المستقبل مرجح أكثر. يتكون الجزء السفلي من الرأس والكتفين من منخفض، يتبعه قاع سفلي ومنخفض أعلى. مثل الرأس والكتفين، يكون توقيت دخول الرأس والكتفين عندما تؤكد أن السعر قد كسر خط العنق  أو تنتظر لترى ما إذا كان خط العنق سيتم اختباره بشكل عكسي.",
-  "theFigureBelowShowsThe": "يوضح الشكل أدناه نمط قاع الرأس والكتفين في السوق الفعلي: ：",
+  "theFigureBelowShowsThe": "يوضح الشكل أدناه نمط قاع الرأس والكتفين في السوق الفعلي: ",
   "doubleTopAndDoubleBottom": "القمة المزدوجة والقاع المزدوج",
   "doubleTopPatternOften": "إن نمط القمة المزدوجة غالبًا ما يظهر في الجزء العلوي من الاتجاه الصعودي. إنه أيضًا نمط انعكاسي، مما يعني نهاية الاتجاه الصعودي. يتكون نمط القمة المزدوجة من قمتين متجاورتين، وأسعار القمتين متشابهة. يقع خط العنق للنموذج عند مستوى الدعم الذي يشكله السعر. عندما ينخفض السعر  إلى ما دون مستوى الدعم، أي خط العنق، فإننا نعتقد أن النمط قد تكوّن.",
   "nTermsOfTheTimingOfEntry": "فيما يخص توقيت الدخول، فيمكنك التفكير عمومًا في فتح مركز بيع عندما ينخفض ​​السعر إلى ما دون خط العنق، أو انتظار السعر لإعادة اختبار خط العنق وتشكيل قمة منخفضة. بمجرد فشل الاختبار الخلفي، غالبًا ما يعني ذلك أن السعر يتحرك حيث أن الدافع أقوى.",
@@ -140,7 +140,7 @@
   "wheneverThePriceMoves": "عند تحرك السعر لعدد معين من النقاط في الاتجاه المرغوب، يتحرك سعر وقف الخسارة المتحرك أيضًا. بعبارة أخرى، عندما يتحرك السعر في الاتجاه المرغوب، فإن وقف الخسارة المتحرك سوف \"يتتبع\" السعر تلقائيًا. يمكن أن تساعدك هذه الميزة في تأمين الأرباح وإدارة معاملاتك تلقائيًا. على سبيل المثال، يمكنك تحديد أنه كلما ارتفع السعر بمقدار 5 نقاط، سيرتفع وقف الخسارة بمقدار 5 نقاط. عندما لاتتمكن من إدارة التداول في الوقت الفعلي، يمكن أن يساعدك وقف الخسارة المتحرك على إدراك إدارة المركز المذكورة أعلاه تلقائيًا. عندما",
   "profitTargetProfit": "يبدأ السعر في التقلب في الاتجاه المعاكس، سوف يظل وقف الخسارة عند السعر الأصلي. عندما يصل سعر السوق إلى سعر وقف يبدأ السعر في التقلب في الاتجاه المعاكس، سوف يظل وقف الخسارة عند السعر الأصلي. عندما يصل سعر السوق إلى سعر وقف ",
   "profitTarget": "إن هدف الرب",
-  "profitTargetProfitTarget": "إن هدف الربح هو سعر محدد مسبقًا ستغلق عنده صفقتك بشكل مربح. يجب أن تحدد مكان تحديد سعر الربح الخاص بك قبل أن تخطط لفتح صفقة. هدف الربح هو جزء مهم من إدارة الاوامر. طالما أن سعر السوق يصل إلى سعر الربح، فلن تحتاج إلى مراقبة الصفقة بجوار الكمبيوتر، وسيساعدك هدف الربح على إغلاق الصفقة والربح تلقائيًا.",
+  "profitTargetIs": "إن هدف الربح هو سعر محدد مسبقًا ستغلق عنده صفقتك بشكل مربح. يجب أن تحدد مكان تحديد سعر الربح الخاص بك قبل أن تخطط لفتح صفقة. هدف الربح هو جزء مهم من إدارة الاوامر. طالما أن سعر السوق يصل إلى سعر الربح، فلن تحتاج إلى مراقبة الصفقة بجوار الكمبيوتر، وسيساعدك هدف الربح على إغلاق الصفقة والربح تلقائيًا.",
   "marketOrder": "أمر السوق",
   "aMarketOrder": "أمر السوق هو المتداول الذي يفتح مركزًا يدويًا وينفذ أمرًا بسعر السوق الحالي القابل للتداول. يميل المتداولون اليوميون وبعض متداولي السكالبينج إلى فتح أوامر السوق للتداول.",
   "pendingOrder": "أمر معلق",
