--- a/src/i18n/locales/en/regionalRepresentative.json
+++ b/src/i18n/locales/en/regionalRepresentative.json
@@ -1,11 +1,11 @@
 {
   "regionalRepresentative": "Regional representative",
-  "thisIsAUnique": "This is a unique opportunity for people who want to develop their businesses locally. Opening a WCG regional office will be a higher-level cooperation option. Manage your own agency company in your area to obtain stable income， and at the same time provide you with the best trading conditions and technology in the industry with our competitive advantages.",
+  "thisIsAUnique": "This is a unique opportunity for people who want to develop their businesses locally. Opening a WCG regional office will be a higher-level cooperation option. Manage your own agency company in your area to obtain stable income, and at the same time provide you with the best trading conditions and technology in the industry with our competitive advantages.",
   "representativeApplication": "Representative application",
   "doNotMiss": "Do not miss this opportunity!",
   "setYourOwn": "Set your own business model freely,your marketing plan,organize seminars,webinars,and activities that are beneficial or related to specific market needs.We will assist you to gain a stable and solid foundation in your local market.",
   "brandsThatShare": "Brands that share a global reputation",
-  "theSupportWe": "The support we provide to regional offices includes but not limited to meeting all the needs for local businesses development.WCG provides consulting services， promotional materials and marketing budget,as well as direct contact with customers for faster and more accurate support.We provide regional representatives with assistance in all technical matters,implementation and integration of local services (such as the most popular payment system in the region) to help optimizing their business performance.",
+  "theSupportWe": "The support we provide to regional offices includes but not limited to meeting all the needs for local businesses development.WCG provides consulting services, promotional materials and marketing budget,as well as direct contact with customers for faster and more accurate support.We provide regional representatives with assistance in all technical matters,implementation and integration of local services (such as the most popular payment system in the region) to help optimizing their business performance.",
   "soleRegional": "Sole regional representative",
   "youWillBe": "You will be the only representative in your area.Through the regional representative program of WCG,you will enjoy the exclusive right of agency in this specific area.",
   "marketingAssistance": "Marketing assistance support",
