--- a/src/i18n/locales/ms/basicTrading.json
+++ b/src/i18n/locales/ms/basicTrading.json
@@ -62,7 +62,7 @@
   "newsTradingIsAVeryPopularWay": "Perdagangan berita adalah cara perdagangan pertukaran mata wang asing yang sangat popular. Bahagian pedagang ini memberi tumpuan kepada perdagangan sebelum dan selepas siaran berita. Seperti disebutkan di atas, data nyata yang menyimpang dari jangkaan pasaran akan menyebabkan turun naik pasaran yang lebih besar. ",
   "avoidNewsTrading": "Elakkan perdagangan berita",
   "thisIsTheThirdTradingMethod": "Ini adalah kaedah perdagangan ketiga, iaitu gunakan tapisan yang sama untuk menyaring berita yang berpengaruh tinggi dan pastikan untuk mengelakkan tempoh berita ini diperdagangkan. Kaedah ini lebih sesuai untuk pedagang (atau pedagang jangka panjang) yang menggunakan carta 1 jam, 4 jam atau harian untuk mengatur strategi perdagangan . ",
-  "afterTheDownloadProcess": "Setelah proses muat turun selesai, mulakan proses pemasangan ：",
+  "afterTheDownloadProcess": "Setelah proses muat turun selesai, mulakan proses pemasangan :",
   "checkYesIAgreeWith": "1. Tandakan \"Ya, saya setuju dengan semua syarat perjanjian lesen ini\" dan kemudian tekan butang \"Seterusnya\". Sekiranya anda perlu menentukan jalan pemasangan platform MT4, klik butang \"Tetapan\". ",
   "theInstallationWizard": "2. Tandakan \"Ya, saya setuju dengan semua syarat perjanjian lesen ini\" dan kemudian tekan butang \"Seterusnya\". Sekiranya anda perlu menentukan jalan pemasangan platform MT4, klik butang \"Tetapan\". ",
   "thePlatformInterface": "3. Interface platform akan dibuka secara automatik, menunjukkan bahawa platform MT4 telah berjaya dipasang. Sekiranya anda menghadapi masalah semasa proses pemasangan, hubungi perkhidmatan pelanggan dalam talian atau hubungi nombor bebas tol untuk menghubungi pasukan khidmat pelanggan. ",
@@ -71,15 +71,15 @@
   "thePlatformWillTakeSomeTime": "Platform akan memerlukan sedikit masa untuk log masuk ke akaun. Anda boleh menyemak sudut kanan bawah platform untuk mengesahkan sama ada sambungan berjaya. Apabila platform berjaya dilog masuk, trafik data harus dipaparkan di sudut kanan bawah. ",
   "createAMarketOrder": "6. Buat market order",
   "thereAreManyWaysTo": "Terdapat banyak cara untuk membuka transaksi baru di platform MT4. Operasi termudah adalah dengan mengklik butang pintasan \"Pesanan Baru\" pada toolbar di bahagian atas platform dan kemudian order window akan muncul",
-  "productCategory": "7. Kategori produk ：Pilih sasaran perdagangan anda",
-  "lotsEnterTheLotSize": "Lot： Masukkan ukuran lot, minimum ialah 0.01 lot (pertukaran mata wang asing, emas dan perak). ",
-  "stopLossPrice": "Stop Loss Price： Apabila harga mencapai harga yang ditentukan, kedudukan ditutup secara automatik; default adalah sifar, yang bermaksud tiada stop loss yang ditetapkan. ",
-  "takeProfitPrice": "Harga take profit：Apabila harga mencapai harga yang ditentukan, posisi akan ditutup secara automatik untuk mengekalkan keuntungan; default adalah sifar, yang bermaksud tiada take profit ditetapkan. ",
-  "sellAtMarketPriceOrBuy": "Jual pada harga pasaran atau beli pada harga pasaran：klik butang merah untuk menjual dan klik butang biru untuk membeli. ",
+  "productCategory": "7. Kategori produk :Pilih sasaran perdagangan anda",
+  "lotsEnterTheLotSize": "Lot: Masukkan ukuran lot, minimum ialah 0.01 lot (pertukaran mata wang asing, emas dan perak). ",
+  "stopLossPrice": "Stop Loss Price: Apabila harga mencapai harga yang ditentukan, kedudukan ditutup secara automatik; default adalah sifar, yang bermaksud tiada stop loss yang ditetapkan. ",
+  "takeProfitPrice": "Harga take profit:Apabila harga mencapai harga yang ditentukan, posisi akan ditutup secara automatik untuk mengekalkan keuntungan; default adalah sifar, yang bermaksud tiada take profit ditetapkan. ",
+  "sellAtMarketPriceOrBuy": "Jual pada harga pasaran atau beli pada harga pasaran:klik butang merah untuk menjual dan klik butang biru untuk membeli. ",
   "theOrderTypeColumn": "\"Jenis Order\" di order window, pilihan default adalah \"Harga Pasaran\", yang bermaksud membuat transaksi pada harga pasaran semasa. ",
   "pendingOrder": "8. Pending order",
   "changeTheOrderType": "Ubah jenis order menjadi \"Pending Order\" di order window untuk melaksanakan arahan order yang belum selesai. ",
-  "thereAreFourTypes": "Terdapat empat jenis pending order：：",
+  "thereAreFourTypes": "Terdapat empat jenis pending order:",
   "buyLimitBuyPending": "Buy limit—— Beli pending order dengan harga yang lebih rendah daripada harga pasaran; ",
   "sellLimitSellPending": "Sell limit——Jual pending order pada harga yang lebih tinggi daripada harga pasaran; ",
   "buyStopBuyPending": "Buy stop——Beli pending order dengan harga yang lebih tinggi daripada harga pasaran; ",
@@ -92,7 +92,7 @@
   "afterOpening": "Setelah membuka posisi, kadang-kala kita perlu menetapkan stop loss/profit untuk posisi tersebut. Di bahagian \"Perdagangan\" pada tetingkap \"Ringkasan\" di bahagian bawah platform, cari posisi yang perlu diubah, klik kanan padanya dan pilih \"Ubah atau Hapus Order\" dari menu」. ",
   "inThePopUpWindow": "Di pop-up window, ikuti tetapan pada gambar di bawah untuk mengubah stop loss/take profit dari posisi. ",
   "closePosition": "11. Tutup posisi",
-  "theSummaryWindowAt": "Setelah membuka perdagangan, anda dapat lihat posisi di bahagian \"Transaksi\" di tetingkap \"Ringkasan\" di bahagian bawah platform：",
+  "theSummaryWindowAt": "Setelah membuka perdagangan, anda dapat lihat posisi di bahagian \"Transaksi\" di tetingkap \"Ringkasan\" di bahagian bawah platform:",
   "theAccountBalance": "Baki akaun, nilai bersih, margin terpakai (margin diduduki), dan margin yang tersedia juga dipaparkan di tetingkap dan nisbah margin terpakai (nisbah margin terpakai = ekuiti/margin terpakai). Sekarang kita akan menutup transaksi ini, klik kanan pada order dan pilih \"Tutup Posisi\"」. ",
   "atThisTimeWeOpened": "Pada masa ini, kami membuka tetingkap pengesahan perdagangan tertutup dan klik butang kuning di tetingkap untuk menutup perdagangan ini dan merealisasikan keuntungan untuk posisi tersebut. ",
   "oneClickClosing": "Penutupan satu klik: Klik butang X di bahagian paling kanan posisi untuk mengaktifkan perdagangan satu klik, ia akan dapat menyelesaikan operasi penutupan dengan lebih cepat. ",
@@ -107,12 +107,12 @@
   "withMT4IsLocatedInThe": "Senarai petunjuk teknikal yang disertakan dengan MT4 terletak di tetingkap navigasi di sebelah kiri platform. Klik kanan petunjuk yang perlu ditambahkan ke carta dan pilih \"Lampirkan ke Carta\" untuk menambahkan petunjuk ke carta semasa. ",
   "afterReadingThis": "Setelah membaca ini, anda telah mengetahui operasi asas yang mesti anda kuasai semasa menggunakan platform MT4. Sebaiknya anda mendaftar untuk akaun demo dan berlatih lebih keras. Sekiranya anda mempunyai pertanyaan mengenai platform, anda boleh menghubungi perkhidmatan pelanggan dalam talian WCG. ",
   "leverageAndMarginMargin": "Leverage dan margin (margin juga disebut \"prabayar\" di platform MT4) adalah seperti dua sisi duit syiling, mereka sebenarnya merujuk kepada konsep yang sama. Di sini kami menggunakan contoh untuk menggambarkan bagaimana leverage dan margin berperanan dalam perdagangan. ",
-  "assumingThatA1Lot": "Dengan andaian bahawa kedudukan USD/JPY 1 lot ditetapkan, nilai posisinya adalah 100,000 USD：",
+  "assumingThatA1Lot": "Dengan andaian bahawa kedudukan USD/JPY 1 lot ditetapkan, nilai posisinya adalah 100,000 USD:",
   "whenTheLeverageRatioIs11": "Apabila nisbah leverage adalah 1:1, margin yang ditempati oleh posisi adalah USD 100,000. Dengan kata lain, anda perlu mempersiapkan sekurang-kurangnya $100,000 untuk membuka posisi yang sama (pasaran saham adalah pasaran dengan nisbah leverage 1:1)）. ",
   "whenTheLeverageRatioIs1400": "Apabila nisbah leverage adalah 1:400, margin yang ditempati oleh kedudukan adalah 100,000/400 = USD 250. Dengan kata lain, dengan leverage 400 kali, anda boleh membuka posisi bernilai $100,000 dengan hanya $250 sebagai margin. ",
   "pleaseKeepInMindThat": "Harap maklum bahawa margin adalah deposit yang perlu dibayar untuk membuat transaksi baru, itu bukan caj kepada anda. Apabila transaksi dibuka, sebahagian dana dalam akaun anda akan digunakan sebagai margin. Semakin besar leverage, semakin kecil margin yang diperlukan untuk transaksi. Apabila perdagangan ditutup, margin yang diduduki akan menjadi margin yang tersedia lagi untuk akaun anda membuka posisi baru atau mengekalkan kerugian mengambang dari posisi lain. ",
   "weUsuallyRecommendTraders": "Kami biasanya mengesyorkan pedagang menggunakan leverage dengan berhati-hati. Leverage adalah pedang bermata dua. Ia dapat meningkatkan keuntungan dan juga kerugian. Dalam contoh di atas, dengan anggapan terdapat 100,000 US dolar dalam akaun dan nisbah leverage adalah 1:1, anda hanya dapat membuka 1 lot USD/JPY. Apabila nisbah leverage adalah 1:400, anda boleh membuka hingga 400 lot USD/JPY. JPY (100,000/250), apabila jumlah urus niaga meningkat, potensi risiko dan keuntungan akan bertambah. ",
-  "stopLossPriceWhenThePrice": "Harga take profit：Apabila harga mencapai harga yang ditentukan, posisi akan ditutup secara automatik untuk mengekalkan keuntungan; default adalah sifar, yang bermaksud tiada take profit ditetapkan. ",
+  "stopLossPriceWhenThePrice": "Harga take profit:Apabila harga mencapai harga yang ditentukan, posisi akan ditutup secara automatik untuk mengekalkan keuntungan; default adalah sifar, yang bermaksud tiada take profit ditetapkan. ",
   "whenUsingLeverage": "Semasa menggunakan leverage, anda juga perlu mencegah risiko pembubaran: jika posisi dibuka terlalu besar, dan harga terus berubah ke arah posisi yang tidak menguntungkan, ketika ekuiti akaun (modal akaun yang berubah dengan untung rugi dari kedudukan) turun ke 50% dari margin yang diduduki, iaitu apabila nisbah pembayaran di platform MT4 jatuh ke 50%, semua posisi di dalam akaun akan dipaksa untuk segera dicairkan. ",
   "weRecommendThatYou": "Kami mengesyorkan agar anda sebagai pemula, mencuba leverage yang berbeza dalam akaun demo anda untuk mengetahui nisbah leverage yang paling sesuai untuk diri anda. ",
   "contractForDifference": "Contract for difference \"CFD\" sebagai alat pelaburan derivatif yang membolehkan pelabur memperdagangkan perubahan harga pelbagai aset kewangan seperti indeks saham dan commodity futures. Dengan memperdagangkan CFD, pelabur dapat membuat spekulasi dengan mudah di pasaran kewangan yang berbeza tanpa benar-benar memegang aset yang mendasari pasaran yang relevan. Kerana dapat dengan mudah memenuhi keperluan pelaburan yang pelbagai dan pelaburan global, perdagangan CFD menjadi semakin popular. ",
