--- a/src/i18n/locales/th/advancedTrading.json
+++ b/src/i18n/locales/th/advancedTrading.json
@@ -84,7 +84,7 @@
   "theAbove": "รูปภาพด้านบนคือกราฟรายสัปดาห์ของ AUDCAD อัตราแลกเปลี่ยนได้รับการสนับสนุนในบริเวณ 0.99-1.00 หลายครั้ง และจากนั้นอัตราแลกเปลี่ยนก็เจอแนวต้านที่ระดับเดียวกันหลายครั้ง",
   "patternRecognitionJudgment": "การตัดสินการจดจำรูปแบบ",
   "chartPatterns": "รูปแบบกราฟมักจะให้วิธีการตัดสินระดับแนวรับและแนวต้าน",
-  "inADouble": "ตัวอย่างเช่น， ในรูปแบบ double top ยอดของมันสามารถถือเป็นระดับแนวต้านที่แข็งแกร่ง เนื่องจากการพักตัวของราคาสองครั้งที่ตำแหน่งนี้ ราง (ขอบเสื้อผู้หญิงตอนหน้าอก) สามารถถือเป็นระดับการสนับสนุน",
+  "inADouble": "ตัวอย่างเช่น, ในรูปแบบ double top ยอดของมันสามารถถือเป็นระดับแนวต้านที่แข็งแกร่ง เนื่องจากการพักตัวของราคาสองครั้งที่ตำแหน่งนี้ ราง (ขอบเสื้อผู้หญิงตอนหน้าอก) สามารถถือเป็นระดับการสนับสนุน",
   "technicalIndexJudgment": "การตัดสินดัชนีทางเทคนิค",
   "someClassicalTechnical": "อินดิเคเตอร์ทางเทคนิคบางตัวสามารถใช้เพื่อกำหนดระดับแนวรับและแนวต้านได้ คลาสสิกที่สุดคือเส้นส่วนสีทอง",
   "byUnderstanding": "เมื่อเข้าใจว่าใครอยู่ในตลาด คุณจะเข้าใจได้ดีขึ้นว่าเหตุใดและราคาจึงได้รับผลกระทบจากข่าวอย่างไร ในเวลาเดียวกัน คุณจะมีความมั่นใจมากขึ้นในการทำธุรกรรม เพราะไม่ว่าราคาซื้อขายจะเป็นเท่าใด ในตลาดก็มีผู้ซื้อและผู้ขายเสมอ",
