--- a/src/i18n/locales/vi/advancedTrading.json
+++ b/src/i18n/locales/vi/advancedTrading.json
@@ -40,7 +40,7 @@
   "theFactorsAffecting": "Các yếu tố ảnh hưởng đến sự thay đổi tỷ giá hối đoái liên quan đến nhiều khía cạnh như xã hội, kinh tế và chính trị. Do đó, phân tích cơ bản có thể cần kết hợp rất nhiều yếu tố phân tích. Vấn đề này hạn chế nhiều người mới bắt đầu trong phân tích cơ bản vì các nguyên tắc cơ bản của thị trường rất năng động. Luôn nhạy cảm không phải là điều dễ dàng. Nhưng đừng lo lắng, khi bạn nghiên cứu sâu hơn về phân tích cơ bản, các khái niệm trong nền kinh tế năng động toàn cầu sẽ hình thành trong tâm trí bạn. Những thay đổi ngắn hạn trong các nguyên tắc cơ bản của thị trường đang liên tục thay đổi bức tranh này. ",
   "ofCourse": "Tất nhiên, phân tích cơ bản không nhằm vào giá thị trường chính xác. Ví dụ: khi phân tích báo cáo việc làm của một quốc gia, chúng ta có thể hiểu tương đối rõ ràng về điều kiện kinh tế tổng thể của quốc gia đó, nhưng nếu chúng ta muốn có được các chiến lược giao dịch cụ thể như điểm vào và điểm ra, chúng ta vẫn cần sử dụng phương pháp phân tích kỹ thuật. Vì lý do này, nhiều nhà giao dịch có thể chọn từ bỏ hoàn toàn phân tích cơ bản và chỉ dựa vào phân tích kỹ thuật nói riêng khi họ thua lỗ bằng cách sử dụng một lượng lớn thông tin cơ bản. Đây là một cách tiếp cận sai lầm. Giao dịch mà không có sự hiểu biết nhất định về các yếu tố cơ bản giống như người mù sờ voi. Thông tin giá bạn thấy trên biểu đồ có thể không phải là sự thật của thị trường. ",
   "longTerm": "Phân tích dài hạn về các nguyên tắc cơ bản",
-  "whenMeasuringCurrencys": "Khi đo lường giá trị tiền tệ， các nguyên tắc cơ bản trong dài hạn sử dụng hai phương pháp phân tích cổ điển: lý thuyết ngang giá sức mua và lý thuyết cán cân thanh toán quốc tế. ",
+  "whenMeasuringCurrencys": "Khi đo lường giá trị tiền tệ, các nguyên tắc cơ bản trong dài hạn sử dụng hai phương pháp phân tích cổ điển: lý thuyết ngang giá sức mua và lý thuyết cán cân thanh toán quốc tế. ",
   "purchasingPower": "Lý thuyết ngang giá sức mua",
   "purchasingPowerParity": "Lý thuyết ngang giá sức mua phát biểu rằng tỷ giá hối đoái của hai loại tiền tệ phải bằng tỷ lệ giữa mức giá của một rổ hàng hóa và dịch vụ ở hai quốc gia này. Điều này là do nếu giá thực tế của một nhóm hàng hoá ở hai quốc gia chênh lệch nhau khá nhiều, giả sử rằng chi phí vận chuyển bằng 0, thương nhân có thể kiếm lời bằng cách mua và bán. ",
   "exchangeRate": "Phân tích dài hạn về các nguyên tắc cơ bản",
@@ -84,7 +84,7 @@
   "theAbovePictureShows": "Hình trên cho thấy mức cao trước đó và mức thấp trước đó trên biểu đồ hàng ngày của AUD / CAD. ",
   "whenJudgingSupport": "Khi đánh giá các mức hỗ trợ và kháng cự, mọi người nghĩ rằng mức cao trước đó có thể là mức kháng cự của xu hướng tăng tiếp theo và mức thấp trước đó có thể là mức hỗ trợ của xu hướng giảm tiếp theo. Bởi vì tỷ giá hối đoái đã từng quay trở lại mức cao trước đó, khi giá di chuyển đến vùng lân cận của mức giá này một lần nữa, nó có thể quay trở lại một lần nữa, và trường hợp của mức thấp trước đó cũng tương tự. ",
   "whenThePrice": "Khi giá quay trở lại mức thấp trước đó hoặc mức cao trước đó lặp đi lặp lại, số lần quay trở lại càng nhiều thì hỗ trợ hoặc kháng cự của giá càng mạnh. Nếu thị trường tiền tệ phá vỡ thành công mức hỗ trợ và thay đổi xu hướng, mức hỗ trợ mạnh ban đầu có khả năng chuyển thành mức kháng cự mạnh trong diễn biến thị trường tiếp theo hoặc ngược lại.",
-  "theAbove": "Hình trên là biểu đồ hàng tuần của AUD/CAD. Tỷ giá hối đoái đã được hỗ trợ trong vùng 0，99-1，00 nhiều lần, và sau đó tỷ giá hối đoái đã gặp phải kháng cự ở cùng mức độ nhiều lần. ",
+  "theAbove": "Hình trên là biểu đồ hàng tuần của AUD/CAD. Tỷ giá hối đoái đã được hỗ trợ trong vùng 0，99-1,00 nhiều lần, và sau đó tỷ giá hối đoái đã gặp phải kháng cự ở cùng mức độ nhiều lần. ",
   "patternRecognitionJudgment": "Phán đoán nhận dạng mẫu",
   "chartPatterns": "Các mẫu biểu đồ thường cung cấp các phương pháp để đánh giá các mức hỗ trợ và kháng cự. ",
   "inADouble": "Ví dụ, trong mô hình hai đỉnh, đỉnh của nó có thể được coi là mức kháng cự mạnh, vì giá thoái lui hai lần tại vị trí này. Đường đáy (đường viền cổ) có thể được coi là mức hỗ trợ. ",
@@ -95,7 +95,7 @@
   "theInterbankMarket": "Thị trường liên ngân hàng bao gồm các ngân hàng thương mại lớn và các nhà kinh doanh chứng khoán. Khối lượng giao dịch của họ chiếm từ 40% đến 50% tổng khối lượng giao dịch ngoại hối, tất nhiên đứng đầu trong danh sách. ",
   "beingAtThe": "Đứng đầu với khối lượng giao dịch lớn nhất, người tham gia có thể hưởng mức chênh lệch thấp nhất. ",
   "centralBanks": "Ngân hàng Trung ương",
-  "controlTheMoney": "Kiểm soát cung tiền, tỷ lệ lạm phát， lãi suất, sử dụng dự trữ ngoại hối khổng lồ để ổn định thị trường trong nước. ",
+  "controlTheMoney": "Kiểm soát cung tiền, tỷ lệ lạm phát, lãi suất, sử dụng dự trữ ngoại hối khổng lồ để ổn định thị trường trong nước. ",
   "thisMeansThat": "Điều này có nghĩa là các ngân hàng trung ương cũng chiếm vị trí quan trọng trên thị trường ngoại hối. ",
   "investmentManagementCompanies": "Công ty quản lý đầu tư",
   "theseCompaniesUsually": "Các công ty này thường quản lý các tài khoản lớn thay mặt cho khách hàng của họ. Ví dụ, một nhà quản lý đầu tư nắm giữ cổ phiếu nước ngoài trong danh mục đầu tư của mình, vì vậy anh ta cần mua và bán một số ngoại tệ để thanh toán các giao dịch chứng khoán nước ngoài. ",
