--- a/src/i18n/locales/vi/basicTrading.json
+++ b/src/i18n/locales/vi/basicTrading.json
@@ -62,7 +62,7 @@
   "newsTradingIsAVeryPopularWay": "Giao dịch tin tức là một cách giao dịch ngoại hối rất phổ biến. Ở phần này các nhà giao dịch tập trung vào giao dịch trước và sau khi phát hành tin tức. Như đã đề cập ở trên, dữ liệu thực tế sai lệch so với kỳ vọng của thị trường sẽ gây ra biến động thị trường lớn hơn. ",
   "avoidNewsTrading": "Tránh giao dịch tin tức",
   "thisIsTheThirdTradingMethod": "Đây là phương pháp giao dịch thứ ba, tức là sử dụng cùng một bộ lọc để lọc ra những tin tức có ảnh hưởng lớn và đảm bảo tránh giao dịch vào những khoảng thời gian tin tức này. Phương pháp này phù hợp hơn với các nhà giao dịch (hoặc các nhà giao dịch siêu dài hạn) sử dụng biểu đồ 1 giờ, 4 giờ hoặc hàng ngày để thiết lập chiến lược giao dịch.",
-  "afterTheDownloadProcess": "Sau khi quá trình tải xuống hoàn tất， hãy bắt đầu quá trình cài đặt:",
+  "afterTheDownloadProcess": "Sau khi quá trình tải xuống hoàn tất, hãy bắt đầu quá trình cài đặt:",
   "checkYesIAgreeWith": "1. Đánh dấu vào \"Có, tôi đồng ý với tất cả các điều khoản của thỏa thuận cấp phép này\" và sau đó nhấn nút \"Tiếp theo\". Nếu bạn cần chỉ định đường dẫn cài đặt của nền tảng MT4, hãy nhấp vào nút \"Cài đặt\". ",
   "theInstallationWizard": "2. Trình hướng dẫn cài đặt sẽ tự động kết nối với trang web MetaQuotes và bắt đầu tải xuống nội dung nền tảng. Khi thanh tiến trình tải xuống hoàn tất, hãy nhấp vào nút \"Hoàn tất\". ",
   "thePlatformInterface": "3. Giao diện nền tảng sẽ tự động mở ra, cho biết rằng nền tảng MT4 đã được cài đặt thành công. Nếu bạn gặp bất kỳ sự cố nào trong quá trình cài đặt, vui lòng liên hệ với bộ phận chăm sóc khách hàng trực tuyến hoặc gọi đến số miễn phí để liên hệ với đội ngũ chăm sóc khách hàng. ",
@@ -72,14 +72,14 @@
   "createAMarketOrder": "6. Tạo lệnh thị trường",
   "thereAreManyWaysTo": "Có nhiều cách để mở một giao dịch mới trên nền tảng MT4. Thao tác đơn giản nhất là nhấp trực tiếp vào nút tắt \"Đơn đặt hàng mới\" trên thanh công cụ ở đầu nền tảng, sau đó cửa sổ đặt hàng sẽ xuất hiện. ",
   "productCategory": "7. Danh mục sản phẩm: Chọn mục tiêu giao dịch của bạn",
-  "lotsEnterTheLotSize": "Lot: Nhập kích thước lô， tối thiểu là 0, 01 lot (ngoại hối， vàng và bạc)",
+  "lotsEnterTheLotSize": "Lot: Nhập kích thước lô, tối thiểu là 0, 01 lot (ngoại hối, vàng và bạc)",
   "stopLossPrice": "Giá cắt lỗ: Khi giá đạt đến mức giá xác định, vị trí sẽ tự động bị đóng; mặc định là 0, có nghĩa là không đặt điểm dừng lỗ. ",
   "takeProfitPrice": "Giá Chốt lời: Khi giá đạt đến mức giá đã định, vị trí sẽ tự động được đóng để giữ lợi nhuận; mặc định là 0, có nghĩa là không có chốt lời được đặt. ",
   "sellAtMarketPriceOrBuy": "Bán theo giá thị trường hoặc mua theo giá thị trường: nhấp vào nút màu đỏ để bán và nhấp vào nút màu xanh để mua. ",
   "theOrderTypeColumn": "Cột \"Loại lệnh\" trong cửa sổ đặt hàng, lựa chọn mặc định là \"Giá thị trường\", nghĩa là tạo giao dịch theo giá thị trường hiện tại. ",
   "pendingOrder": "8. Lệnh đang chờ xử lý",
   "changeTheOrderType": "Thay đổi loại lệnh thành \"Lệnh đang chờ xử lý\" trong cửa sổ lệnh để thực hiện lệnh lệnh chờ. ",
-  "thereAreFourTypes": "Có bốn loại lệnh đang chờ xử lý：",
+  "thereAreFourTypes": "Có bốn loại lệnh đang chờ xử lý:",
   "buyLimitBuyPending": "Giới hạn mua —— Mua lệnh chờ ở mức giá thấp hơn giá thị trường;",
   "sellLimitSellPending": "Giới hạn bán —— Bán lệnh chờ ở mức giá cao hơn giá thị trường;",
   "buyStopBuyPending": "Dừng mua —— Mua lệnh chờ ở mức giá cao hơn giá thị trường;",
@@ -102,7 +102,7 @@
   "depositsTotalDeposits": "Tiền gửi: tổng số tiền gửi. ",
   "withdrawalTheTotal": "Rút tiền: tổng số tiền rút. ",
   "openTheChartAndLoad": "13. Mở biểu đồ và tải các chỉ báo kỹ thuật. ",
-  "afterTheMT4Platform": "Sau khi nền tảng MT4 được cài đặt， bốn biểu đồ sẽ được mở theo mặc định",
+  "afterTheMT4Platform": "Sau khi nền tảng MT4 được cài đặt, bốn biểu đồ sẽ được mở theo mặc định",
   "ifYouWantToSwitch": "Nếu bạn muốn tạo một biểu đồ mới, cách đơn giản nhất là nhấp chuột phải vào bảng báo giá của sản phẩm cần tạo biểu đồ mới, và chọn tùy chọn menu \"Cửa sổ Biểu đồ\". ",
   "withMT4IsLocatedInThe": "MT4 nằm trong cửa sổ hướng ở phía bên trái của nền tảng. Nhấp chuột phải vào chỉ số cần thêm vào biểu đồ và chọn \"Đính kèm vào biểu đồ\" để thêm chỉ báo vào biểu đồ hiện tại. ",
   "afterReadingThis": "Sau khi đọc phần này, bạn đã học được các thao tác cơ bản mà bạn phải thành thạo khi sử dụng nền tảng MT4. Bạn nên đăng ký một tài khoản demo và luyện tập chăm chỉ hơn. Nếu bạn có bất kỳ câu hỏi nào về nền tảng này, bạn có thể liên hệ với dịch vụ khách hàng trực tuyến của WCG. ",
