--- a/src/i18n/locales/zh/basicTrading.json
+++ b/src/i18n/locales/zh/basicTrading.json
@@ -107,11 +107,11 @@
   "withMT4IsLocatedInThe": "MT4自帶的技術指標列表位於平台左邊的導航視窗內，在需要添加到圖表的指標上單擊滑鼠右鍵，選擇「附加到圖表」，可以把指標添加到當前圖表上。",
   "afterReadingThis": "閱讀到這裡，您已經了解到了使用MT4平台時必須掌握的操作。建議您註冊一個模擬帳戶勤加練習。如果對平台還有其他不了解的地方，歡迎您聯系WCG的線上客服。",
   "leverageAndMarginMargin": "杠桿和保證金（在MT4平台上保證金又叫「預付款」）像是一枚硬幣的正反面，它們所指的其實是同一個概念。我們在這裡通過一個示例來說明杠桿與保證金是如何在交易中發揮作用的。",
-  "assumingThatA1Lot": "假設建立1手USD/JPY倉位，倉位的價值是100，000美元：",
-  "whenTheLeverageRatioIs11": "當杠桿比例為1:1時，倉位占用的保證金是100，000美元。也就是說，您需要準備至少100，000美元來開設等額的倉位（股票市場就是一個杠桿比例為1:1的市場）。",
-  "whenTheLeverageRatioIs1400": "當杠桿比例為400:1時，倉位占用的保證金是100，000 / 400 = 250美元。也就是說，通過400倍的杠桿，您用250美元作為保證金，能開設價值100，000美元的倉位。",
+  "assumingThatA1Lot": "假設建立1手USD/JPY倉位，倉位的價值是100,000美元：",
+  "whenTheLeverageRatioIs11": "當杠桿比例為1:1時，倉位占用的保證金是100,000美元。也就是說，您需要準備至少100,000美元來開設等額的倉位（股票市場就是一個杠桿比例為1:1的市場）。",
+  "whenTheLeverageRatioIs1400": "當杠桿比例為400:1時，倉位占用的保證金是100,000 / 400 = 250美元。也就是說，通過400倍的杠桿，您用250美元作為保證金，能開設價值100,000美元的倉位。",
   "pleaseKeepInMindThat": "請謹記，保證金是用於建立新的交易需要墊付的押金，它並不是對您的收費。當一筆交易開設時，您帳戶中的一部分資金會被用作占用保證金，杠桿比例越大，交易的占用保證金就越小。當交易平倉時，占用保證金會重新變成可用保證金，供您的帳戶開設新交易，或維持其他持倉的浮動虧損。",
-  "weUsuallyRecommendTraders": "我們通常建議交易者謹慎小心地使用杠桿，杠桿是一把雙刃劍，它既可能放大盈利也可能放大虧損。在上面的例子中，假設帳戶內有100，000美元的資金，杠桿比例為1:1時，您只能開設1手USD/JPY，當杠桿比例為400:1時，您最多能開設400手USD/JPY（100，000 / 250），交易量增大的同時，潛在的風險和利益都放大了。",
+  "weUsuallyRecommendTraders": "我們通常建議交易者謹慎小心地使用杠桿，杠桿是一把雙刃劍，它既可能放大盈利也可能放大虧損。在上面的例子中，假設帳戶內有100,000美元的資金，杠桿比例為1:1時，您只能開設1手USD/JPY，當杠桿比例為400:1時，您最多能開設400手USD/JPY（100,000 / 250），交易量增大的同時，潛在的風險和利益都放大了。",
   "stopLossPriceWhenThePrice": "獲利價：當價格達到指定價格時，自動平倉保住獲利；默認為零，代表不設置止盈。",
   "whenUsingLeverage": "在使用杠桿時，您還需要預防爆倉的風險：假如開設的倉位過大，而價格又不斷朝倉位不利的方向波動，當帳戶凈值（跟隨持倉盈虧時刻變化的帳戶資金）跌至占用保證金的30%時，也即MT4平台上的預付款比例跌至30%時，帳戶內的所有倉位將會立刻被強制平倉。",
   "weRecommendThatYou": "我們建議作為新手的您在模擬帳戶內試用不同的杠桿，找出最適合您的杠桿比例。",
