--- a/src/i18n/locales/cn/basicTrading.json
+++ b/src/i18n/locales/cn/basicTrading.json
@@ -107,11 +107,11 @@
   "withMT4IsLocatedInThe": "MT4自带的技术指标列表位于平台左边的导航视窗内，在需要添加到图表的指标上单击鼠标右键，选择「附加到图表」，可以把指标添加到当前图表上。",
   "afterReadingThis": "阅读到这里，您已经了解到了使用MT4平台时必须掌握的操作。建议您注册一个模拟帐户勤加练习。如果对平台还有其他不了解的地方，欢迎您联系WCG的在线客服。",
   "leverageAndMarginMargin": "杠杆和保证金（在MT4平台上保证金又叫「预付款」）像是一枚硬币的正反面，它们所指的其实是同一个概念。我们在这里通过一个示例来说明杠杆与保证金是如何在交易中发挥作用的。",
-  "assumingThatA1Lot": "假设建立1手USD/JPY仓位，仓位的价值是100，000美元：",
-  "whenTheLeverageRatioIs11": "当杠杆比例为1:1时，仓位占用的保证金是100，000美元。也就是说，您需要准备至少100，000美元来开设等额的仓位（股票市场就是一个杠杆比例为1:1的市场）。",
-  "whenTheLeverageRatioIs1400": "当杠杆比例为400:1时，仓位占用的保证金是100，000 / 400 = 250美元。也就是说，通过400倍的杠杆，您用250美元作为保证金，能开设价值100，000美元的仓位。",
+  "assumingThatA1Lot": "假设建立1手USD/JPY仓位，仓位的价值是100,000美元：",
+  "whenTheLeverageRatioIs11": "当杠杆比例为1:1时，仓位占用的保证金是100,000美元。也就是说，您需要准备至少100,000美元来开设等额的仓位（股票市场就是一个杠杆比例为1:1的市场）。",
+  "whenTheLeverageRatioIs1400": "当杠杆比例为400:1时，仓位占用的保证金是100,000 / 400 = 250美元。也就是说，通过400倍的杠杆，您用250美元作为保证金，能开设价值100,000美元的仓位。",
   "pleaseKeepInMindThat": "请谨记，保证金是用于建立新的交易需要垫付的押金，它并不是对您的收费。当一笔交易开设时，您帐户中的一部分资金会被用作占用保证金，杠杆比例越大，交易的占用保证金就越小。当交易平仓时，占用保证金会重新变成可用保证金，供您的帐户开设新交易，或维持其他持仓的浮动亏损。",
-  "weUsuallyRecommendTraders": "我们通常建议交易者谨慎小心地使用杠杆，杠杆是一把双刃剑，它既可能放大盈利也可能放大亏损。在上面的例子中，假设帐户内有100，000美元的资金，杠杆比例为1:1时，您只能开设1手USD/JPY，当杠杆比例为400:1时，您最多能开设400手USD/JPY（100，000 / 250），交易量增大的同时，潜在的风险和利益都放大了。",
+  "weUsuallyRecommendTraders": "我们通常建议交易者谨慎小心地使用杠杆，杠杆是一把双刃剑，它既可能放大盈利也可能放大亏损。在上面的例子中，假设帐户内有100,000美元的资金，杠杆比例为1:1时，您只能开设1手USD/JPY，当杠杆比例为400:1时，您最多能开设400手USD/JPY（100,000 / 250），交易量增大的同时，潜在的风险和利益都放大了。",
   "stopLossPriceWhenThePrice": "获利价：当价格达到指定价格时，自动平仓保住获利；默认为零，代表不设置止盈。",
   "whenUsingLeverage": "在使用杠杆时，您还需要预防爆仓的风险：假如开设的仓位过大，而价格又不断朝仓位不利的方向波动，当帐户净值（跟随持仓盈亏时刻变化的帐户资金）跌至占用保证金的30%时，也即MT4平台上的预付款比例跌至30%时，帐户内的所有仓位将会立刻被强制平仓。",
   "weRecommendThatYou": "我们建议作为新手的您在模拟帐户内试用不同的杠杆，找出最适合您的杠杆比例。",
