--- a/src/i18n/locales/ms/fundManager.json
+++ b/src/i18n/locales/ms/fundManager.json
@@ -19,7 +19,7 @@
   "openMainAccount": "Buka akaun utama",
   "collectTheTradingHistory": "Kumpulkan sejarah perdagangan akaun mereka",
   "manageInvestorAccounts": "Urus akaun pelabur",
-  "setANickname": "Tetapkan nama samaran， tetapkan had risiko",
+  "setANickname": "Tetapkan nama samaran, tetapkan had risiko",
   "setFees": "Tetapkan yuran",
   "investorsCan": "Pelabur boleh",
   "lookForAFund": "Cari pengurus pelaburan dana",
